--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -2,20 +2,21 @@
 <!-- ============================================================== -->
 <div class="row">
   <div class="col-6">
-    <div class="card">
-      <div class="card-body">
-        <h3>Ventas</h3>
-        <div style="display: block">
-          <canvas
-            baseChart
-            class="chart"
-            [data]="doughnutChartData"
-            [type]="doughnutChartType"
-          >
-          </canvas>
-        </div>
-      </div>
-    </div>
+    <app-dona title="Ventas"></app-dona>
+  </div>
+
+  <div class="col-6">
+    <app-dona title="Compras" [labels]="labels1" [data]="data1"></app-dona>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-6">
+    <app-dona title="Perdidas"></app-dona>
+  </div>
+
+  <div class="col-6">
+    <app-dona title="Mermas"></app-dona>
   </div>
 </div>
 <!-- ============================================================== -->
