--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -36,7 +36,7 @@
     <!-- ============================================================== -->
     <!-- footer -->
     <!-- ============================================================== -->
-    <footer class="footer">© 2017 Admin Pro by wrappixel.com</footer>
+    <footer class="footer">© {{ fecha }} Admin Pro by wrappixel.com</footer>
     <!-- ============================================================== -->
     <!-- End footer -->
     <!-- ============================================================== -->
